# voxelife

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json  voxelife.code-workspace
docs/: rapport.md
scripts/: deps_setup_debian.sh
src/: CMakeLists.txt  drawable.cpp  drawable.hpp  geomutils.cpp  geomutils.hpp  logic.cpp  logic.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  simChunk.hpp  sparseChunk.cpp  sparseChunk.hpp  world.cpp  world.hpp
src/rendering/: material.cpp  mesh.cpp  mesh.hpp
src/shaders/: cloud.frag
src/storage/: simChunk.cpp  simChunk.hpp  sparseChunk.hpp
